# yummigo

./: .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: README.md  main.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/graphql/: schema.py
backend/src/: README.md
backend/src/db/: models.py  session.py
backend/src/graphql/: schema.py
backend/tests/: test_graphql.py
web/: package-lock.json  package.json
